feat: Menu Lateral

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Charmonman:wght@400;700&family=Cormorant:ital,wght@0,300..700;1,300..700&family=Miltonian&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Questrial&family=Rubik+Doodle+Shadow&family=Sedan:ital@0;1&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clínica</title>
   </head>
